# rustvulncheck

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design.md  lessons.md  vuln_db.json
.github/workflows/: ci.yml  enrich.yml
demo/not-reachable/src/: main.rs
demo/reachable/src/: main.rs
src/: advisory.rs  analyzer.rs  ast_differ.rs  db.rs  diff_analyzer.rs  github.rs  lockfile.rs  main.rs  scanner.rs  type_tracker.rs
tests/: integration_test.rs
tests/fixtures/: golden_vuln_db.json  test_vuln_db.json
tests/fixtures/crates/hyper/: RUSTSEC-2024-0001.md  RUSTSEC-2024-0001.toml
tests/fixtures/crates/smallvec/: RUSTSEC-2024-0003.md  RUSTSEC-2024-0003.toml
tests/fixtures/crates/tokio/: RUSTSEC-2024-0002.md  RUSTSEC-2024-0002.toml
tests/fixtures/edge_cases_project/src/: aliased.rs  commented.rs  false_positive.rs  grouped.rs  main.rs
tests/fixtures/safe_project/src/: handler.rs  main.rs
tests/fixtures/test_project/src/: main.rs
tests/fixtures/vulnerable_project/src/: main.rs  server.rs  utils.rs
