[package]
name = "cargo-deep-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
git2 = "0.19"
walkdir = "2"
anyhow = "1"
semver = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"

[dev-dependencies]
tempfile = "3"
